--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,8 +1,6 @@
 {
-    "DatabaseSettings": {
-        "ConnectionString": "mongodb://catalogdb:27017",
-        "DatabaseName": "ProductDb",
-        "CollectionName": "Produts"
+    "CacheSettings": {
+        "ConnectionString":  "localhost:6379"
     },
     "Logging": {
         "LogLevel": {
@@ -10,5 +8,6 @@
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Information"
         }
-    }
+    },
+    "AllowedHosts": "*"
 }
