--- a/src/Services/Discount/Discount.API/appsettings.json
+++ b/src/Services/Discount/Discount.API/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "CacheSettings": {
-        "ConnectionString": "localhost:6379"
+    "DatabaseSettings": {
+        "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
     },
     "Logging": {
         "LogLevel": {
@@ -8,5 +8,6 @@
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Information"
         }
-    }
+    },
+    "AllowedHosts": "*"
 }
