added order solution & event bus

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,10 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "OrderingConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OrderDb;Integrated Security=true;"
+    },
+    "EmailSettings": {
+        "FromAddress": "stefan.hafner.development@gmail.com",
+        "ApiKey": "",
+        "FromName":  "Stefan"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
