--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3.4'
 
 services:
+  orderdb:
+     image: mcr.microsoft.com/mssql/server:2017-latest
+
   catalogdb:
      image: mongo
 
@@ -12,6 +15,9 @@ services:
 
   discountdb:
      image: postgres
+
+  rabbitmq:
+     image: rabbitmq:3-management-alpine
 
   pgadmin:
      image: dpage/pgadmin4
@@ -40,10 +46,17 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Services/Ordering/Ordering.API/Dockerfile
+
 volumes:
    mongo_data: 
    portainer_data:
    postgres_data:
    pgadmin_data:
+
 
 
