--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,11 +1,14 @@
 {
+    "EventBusSettings": {
+        "HostAddress": "amqp://guest:guest@localhost:5672"
+    },
     "ConnectionStrings": {
         "OrderingConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=OrderDb;Integrated Security=true;"
     },
     "EmailSettings": {
         "FromAddress": "stefan.hafner.development@gmail.com",
         "ApiKey": "",
-        "FromName":  "Stefan"
+        "FromName": "Stefan"
     },
     "Logging": {
         "LogLevel": {
