--- a/src/WebApps/AspnetRunBasics/Properties/launchSettings.json
+++ b/src/WebApps/AspnetRunBasics/Properties/launchSettings.json
@@ -6,7 +6,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:56472;http://localhost:56473"
+      "applicationUrl": "https://localhost:5006"
+    },
+    "Docker (1)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
